finished HTML structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
 </head>
 
 <body>
+    <header>
+        <div>
+            <h2 id="main-header">Random Fact Generator</h2>
+        </div>
+        <div>
+            <h2 id="saved-fact-header">My Saved Facts</h2>
+        </div>
+    </header>
+
+    <main>
+        <div id="category-container"></div>
+        <div id="fact-container"></div>
+        <div id="saved-fact-container"></div>
+    </main>
+
+    <footer>
+        <button id="save-fact">Save Fact</button>
+        <button id="new-fact">New Fact</button>
+        <button id="saved-facts">Saved Facts</button>
+    </footer>
+
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
