--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2 id="main-header">Random Fact Generator</h2>
         </div>
         <div>
-            <h2 id="saved-fact-header">My Saved Facts</h2>
+            <h2 class="hide" id="saved-fact-header">My Saved Facts</h2>
         </div>
     </header>
 
