combining CSS and JS

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
     <!--category-container-->
    <div
            class="header"><header>Choose a category<header></div>
-           <div  
-             class="categeory-buttons">
+           <div class="categeory-buttons">
              <div class="cat-buttons">
               <button class="button is-fullwidth"><a href="index.html"> Cats</a></button>
              </div>
@@ -138,7 +137,7 @@
     <div class="footer-contain">
       <p>Power By:</p>
       <a href="">Sam Miller</a>
-      <a href="">|  Rob Benney</a>
+      <a href="https://rbenney15.github.io/Benney-Portfolio/">|  Rob Benney</a>
       <a href="">|  Tariq Stanikzai</a>
       </p>
     </div>
