solved the display fact within the js and integrated the css

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!--category-container-->
 <div class="header">
     <header>Choose a fact category<header>
-    <div class="category-container categeory-buttons">
+    <div id="category-container" class="categeory-buttons">
         <div id="cat-buttons">
             <button class="hide button is-fullwidth">Cats</button>
         </div>
@@ -45,11 +45,11 @@
 </div>
 
 <!--fact-container-->
-<div class="hide fact-container card">
-    <div class="hide content">
-        <div class="hide quote-area">
+<div id="fact-container" class="hide card">
+    <div class="content">
+        <div class="quote-area">
             <i class="fas fa-quote-left"></i>
-            <p class="quote cat-fact num-fact"></p>
+            <p id="num-fact cat-fact" class="quote"></p>
             <i class="fas fa-quote-right"></i>
         </div>
     
